<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="?colorPrimary">

        <TextView
            android:id="@+id/textToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:textColor="?textColorPrimary"
            android:textSize="18sp"
            tools:text="Title" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/selectTestLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutTitleBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorPrimary"
            android:paddingBottom="20dp"
            android:paddingEnd="10dp"
            android:paddingStart="20dp">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/selectTest"
                android:textColor="#fff"
                android:textSize="30sp" />

        </LinearLayout>

        <!--<org.akvo.caddisfly.widget.HtmlTextView-->
            <!--android:id="@+id/textSelectTest"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="20dp"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:lineSpacingExtra="10dp"-->
            <!--android:paddingEnd="@dimen/activity_horizontal_margin"-->
            <!--android:paddingStart="@dimen/activity_horizontal_margin"-->
            <!--android:text="@string/select_test"-->
            <!--android:textSize="18sp" />-->

        <org.akvo.caddisfly.widget.HtmlTextView
            android:id="@+id/textSelectInstruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="10dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:textSize="18sp" />


        <!--<Button-->
            <!--android:id="@+id/button_instructions"-->
            <!--style="?android:attr/buttonBarButtonStyle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="end"-->
            <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
            <!--android:drawableEnd="@drawable/ic_play_arrow_black_24dp"-->
            <!--android:paddingEnd="@dimen/activity_horizontal_margin"-->
            <!--android:paddingStart="@dimen/activity_horizontal_margin"-->
            <!--android:text="@string/instructions"-->
            <!--android:textColor="@android:color/holo_blue_dark"-->
            <!--android:textSize="16sp"-->
            <!--android:textStyle="bold"-->
            <!--android:visibility="visible" />-->

        <Button
            android:id="@+id/buttonTestSelected"
            style="@style/ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:enabled="true"
            android:minWidth="230dp"
            android:theme="?primaryButtonStyle" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutWaiting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/layoutInstructions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:visibility="gone" />

</RelativeLayout>