...
    <string name="camera_busy">Camera Busy</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="close">Close</string>
    <string name="select_test">Select Test</string>
    <string name="save">Save</string>
    <string name="instructions">Instructions</string>
    <string name="analyze">Analyse</string>

    <plurals name="dilutions">
        <item quantity="one">@string/no_dilution</item>
        <item quantity="many">@string/times_dilution</item>
        <item quantity="other">@string/times_dilution</item>
...
